add icon V2RayTun

--- a/subscription/index.html
+++ b/subscription/index.html
@@ -927,7 +927,7 @@
 										data-bs-target="#accordionOsAndroidV2raytun"
 										aria-expanded="false"
 										aria-controls="accordionOsAndroidV2raytun">
-								  <svg class="my-icon-small"><use href="#v2raytun"></use></svg>
+								  <svg class="my-icon-small"><use href="#v2rayng"></use></svg>
 								  <span class="d-block w-100 text-center">
 									V2RayTun
 								  </span>
