--- a/subscription/template_subscription_index.html
+++ b/subscription/template_subscription_index.html
@@ -480,7 +480,7 @@
 			
 			<!-- Logo, support and language switcher -->
 			<header class="d-flex flex-wrap align-items-center gap-2 mb-5 justify-content-between">
-				<img src="https://raw.githubusercontent.com/streletskiy/marzban-sub-page/refs/heads/main/img/logo.png" alt="Logo" width="32" height="32">
+				<img src="https://vpn-for-friends.com/logobot.jpg" alt="Logo" width="32" height="32">
 				<ul class="nav align-items-center">
 					<li class="nav-item"><a class="nav-link my-nav-link fw-semibold px-2" id="href-support" rel="noopener noreferrer" target="_blank" x-text="$t('support')"></a></li>
 					<li class="nav-item">
